--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 find_package(OpenMP REQUIRED)
 
 add_executable(parser main.cpp Database.cpp Database.h )
-add_library(parserlib MODULE Database.cpp Database.h)
+add_library(parserlib STATIC Database.cpp Database.h)
 target_compile_options(parser PRIVATE -Wall ${OpenMP_CXX_FLAGS})
 target_link_libraries(parser PRIVATE ${OpenMP_CXX_FLAGS})
