--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 find_package(OpenMP REQUIRED)
 
 add_executable(parser main.cpp Database.cpp Database.h FreeBlock_parser.cpp FreeBlock_parser.h)
-add_library(parserlib STATIC Database.cpp Database.h FreeBlock_parser.cpp FreeBlock_parser.h)
+add_library(parserlib SHARED Database.cpp Database.h FreeBlock_parser.cpp FreeBlock_parser.h)
 target_compile_options(parser PRIVATE -Wall ${OpenMP_CXX_FLAGS})
 target_link_libraries(parser PRIVATE ${OpenMP_CXX_FLAGS})
